security_group.tf
resource "aws_security_group" "emr_master" {
name = "${var.name} - EMR-master"
description = "Security group for EMR-master"
vpc_id = var.vpc_id
revoke_rules_on_delete = true

ingress {
from_port = 22
to port = 22
protocol = "tcp"
cidr_blocks = [var.ingress_cidr_blocks]
}

ingress {
from_port = 4040
to port = 4040
protocol = "tcp"
cidr_blocks = [var.ingress_cidr_blocks]
}

ingress {
from_port = 8888
to port = 8888
protocol = "tcp"
cidr_blocks = [var.ingress_cidr_blocks]
}

ingress {
from_port = 20888
to port = 20888
protocol = "tcp"
cidr_blocks = [var.ingress_cidr_blocks]
}

egress {
from_port = 0
to port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "EMR_master"
}
}

resource "aws_security_group" "emr_slave" {
name = "${var.name} - EMR-slave"
description = "Security group for EMR-slave"
vpc_id = var.vpc_id
revoke_rules_on_delete = true

ingress {
from_port = 22
to port = 22
protocol = "tcp"
cidr_blocks = [var.ingress_cidr_blocks]
}

egress {
from_port = 0
to port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "EMR_slave"
}
}
